--- a/index.html
+++ b/index.html
@@ -1,65 +1,216 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Social Media</title>
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-       <header>
-           <div>Logo
+<head>
+  <title>Social Media</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <header>
+    <div class="logo-area">
+      <a href="index.html">Logo</a>
+    </div>
+    <div class="menu">
+      <ul>
+        <li>
+          <a href="chloe.html">
+            Chloe
+          </a>
+        </li>
+        <li>
+          <a href="chloe.html">
+            Home
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="icon-links">
+      <ul class="quick-options">
+        <li>
+          <a href="chloe.html">
+            <i class="fa fa-users" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a href="chloe.html">
+            <i class="fa fa-comments" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a href="chloe.html">
+            <i class="fa fa-bell" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
+      <div class="privacy">
+        <i class="fa fa-lock" aria-hidden="true"></i>
+      </div>
+    </div>
+    <div class="search-area">
+      <ul>
+        <li>
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </li>
+        <li>
+          <input type="text" name="search">
+        </li>
+        <li>
+          <i class="fa fa-times" aria-hidden="true"></i>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <section id="top-area">
+    <div class="profile-info">
+      <div class="user-img">
+        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/davidburlton/128.jpg" />
+      </div>
+      <div class="user-details">
+        <h3>Chloe Grace Moretz</h3>
+        <a href="update.html">Update Info</a>
+        <a href="view.html">View Activity</a>
+      </div>
+    </div>
+  </section>
+  <section id="content-area">
+    <div class="side-column">
+      <div class="widget-box intro">
+        <div class="head">
+          <div style="display: inline-block;">
+            <div class="widget-icon">
+              <i class="fa fa-globe" aria-hidden="true"></i>
+            </div>
+          </div>
+          <div class="widget-title">
+            title
+          </div>
+        </div>
+        <div class="body">
+          <h6></h6>
+          <p></p>
+          <p></p>
+          <a href="#">Update Info</a>
+        </div>
+      </div>
+      <div class="widget-box photos">
+        <div class="head">
+          <div class="widget-icon">
+            img
+          </div>
+          <div class="widget-title">
+            intro
+          </div>
+        </div>
+        <div class="body">
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"> </div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+        </div>
+      </div>
+      <div class="widget-box friends">
+        <div class="head">
+          <div class="widget-icon">
+            img
+          </div>
+          <div class="widget-title">
+            title
+          </div>
+        </div>
+        <div class="body">
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"> </div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+          <div style = "display: inline-block; float: left; height: 110px; width: 33.33%; background: url(https://wallpapercave.com/wp/IgouwDQ.jpg) no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;"></div>
+        </div>
+      </div>
+    </div>
+    <div class="main-area">
 
-           </div>
-           <div>
-               <ul>
-                   <li>
-                       <a href="chloe.html">
-                           Chloe
-                       </a>
-                   </li>
-                   <li>
-                       <a href="chloe.html">
-                           Home
-                       </a>
-                   </li>
-               </ul>
-           </div>
-           <div>
-                <ul>
-                    <li>
-                        <a href="chloe.html">
-                            <i class="fa fa-users" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="chloe.html">
-                            <i class="fa fa-comments" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="chloe.html">
-                            <i class="fa fa-bell" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                </ul>
-                <div>
-                    lock
-                </div>
-           </div>
-           <div>
-               <ul>
-                   <li>
-                       <i class="fa fa-search" aria-hidden="true"></i>
-                   </li>
-                   <li>
-                       <input type="text" name="search">
-                   </li>
-                   <li>
-                       <i class="fa fa-times" aria-hidden="true"></i>
-                   </li>
-               </ul>
-           </div>
-       </header>
-    </body>
+    </div>
+  </section>
+</body>
 </html>
