--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     <div class="side-column">
       <div class="widget-box intro">
         <div class="head">
-          <div style="display: inline-block;">
+          <div class="widget-icon-container">
             <div class="widget-icon">
               <i class="fa fa-globe" aria-hidden="true"></i>
             </div>
           </div>
           <div class="widget-title">
-            title
+            Intro
           </div>
         </div>
         <div class="body">
@@ -95,11 +95,13 @@
       </div>
       <div class="widget-box photos">
         <div class="head">
-          <div class="widget-icon">
-            img
+          <div class="widget-icon-container">
+            <div class="widget-icon">
+              <i class="fa fa-globe" aria-hidden="true"></i>
+            </div>
           </div>
           <div class="widget-title">
-            intro
+            Intro
           </div>
         </div>
         <div class="body">
@@ -152,11 +154,13 @@
       </div>
       <div class="widget-box friends">
         <div class="head">
-          <div class="widget-icon">
-            img
+          <div class="widget-icon-container">
+            <div class="widget-icon">
+              <i class="fa fa-globe" aria-hidden="true"></i>
+            </div>
           </div>
           <div class="widget-title">
-            title
+            Intro
           </div>
         </div>
         <div class="body">
@@ -209,7 +213,31 @@
       </div>
     </div>
     <div class="main-area">
-
+      <div class="widget-box submenu">
+        <ul>
+          <li>
+            <i class="fa fa-clock-o" aria-hidden="true"></i>
+            <span>timeline</span>
+          </li>
+          <li>
+            <i class="fa fa-address-card" aria-hidden="true"></i>
+            <span>about</span>
+          </li>
+          <li>
+            <i class="fa fa-users" aria-hidden="true"></i>
+            <span>friends</span>
+          </li>
+          <li>
+            <i class="fa fa-picture-o" aria-hidden="true"></i>
+            <span>photos</span>
+          </li>
+          <li>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </li>
+        </ul>
+      </div>
+      <div class="widget-box post">
+      </div>
     </div>
   </section>
 </body>
